Created initial Edit Team  modal styles/markup.

--- a/app/views/teams/_manage.html.erb
+++ b/app/views/teams/_manage.html.erb
@@ -1,64 +1,37 @@
-<div id='team_popup' >
+<div class="container large-8"> 
+  <div class="row">
+    <div class="container small-8 large-8">
+			<%= form_tag('/teams/manage', :id=>'manage_team') do %>
+				<h3>Edit <%= @teamType %> Account</h3>
+				<% if (!@authInfo.nil?) %>
+					<img src="/images/refresh.png" width="10" height="10" alt="Refresh Icon">
+					<a class="LeftNavLink" href="javascript:reload_team()">Reload Teams</a>
+				<% end %>
 
-
-<%= form_tag('/teams/manage', :id=>'manage_team') do %>
-<TABLE cellpadding="0" cellspacing="1"  width="400">
-		<tr  >
-			<td align="left" ><%=@teamType%> ID:</td>
-			<td align="left" >
-				<%-if (@authInfo.nil?)-%>
-				<%= text_field_tag('userid', '', options = {:size => 12,  :onfocus => "$('team_manage_submit').disabled = false"}) %>
-				<%= hidden_field_tag('current_user') %>
-				<%-else-%>
-				<%= text_field_tag('userid', @authInfo.login, options = {:size => 12, :onfocus => "$('team_manage_submit').disabled = false",
-:disabled  => true}) %> 
-				<img src="/images/editIcon.gif" alt="Edit Icon">
-				<a href="javascript:activateUserField()" class="LeftNavLink">Edit</a>
-				
-				<%= hidden_field_tag('current_user', @authInfo.login) %>
+				<% if (@authInfo.nil?) %>
+					<%= label_tag('userid', 'User Name') %>
+					<%= text_field_tag('userid', '', options = {:size => 12}) %>
+					<%= hidden_field_tag('current_user') %>
+				<% else %>
+					<%= label_tag('userid', 'User Name') %>
+					<%= text_field_tag('userid', @authInfo.login, options = {:size => 12}) %> 
+					<%= hidden_field_tag('current_user', @authInfo.login) %>
 				<%-end-%>
-			</td>
-			<td align="right" ><%-if (!@authInfo.nil?)-%>
-				
-				<img src="/images/refresh.png" width="10" height="10" alt="Refresh Icon">
-				<a class="LeftNavLink" href="javascript:reload_team()">Load Teams</a>
-				<%-end-%>
-			</td>
-		</tr>
-		<tr   >
-			<td align="left" >Password:</td>
-			<td align="left" >
-				<%-if (@authInfo.nil?)-%>
-				<%= password_field_tag(:pass,'',options ={:size => 12,:onfocus => "$('team_manage_submit').disabled = false"}) %> 
-				<%-else-%>
-				<%= password_field_tag(:pass,'', options = {:size => 12, :onfocus => "$('team_manage_submit').disabled = false",
-:disabled  => true}) %> 
-				<img src="/images/editIcon.gif" alt="Edit Icon">
-				<a href="javascript:activatePassField()" class="LeftNavLink">Edit</a>
-				
-				<%-end-%>
-				
-			</td>
-			<td align="right" >
-				<BUTTON  type="button" id='team_manage_submit' onclick="submit_team()" disabled="disabled"><%=(@authInfo.nil?)?'Submit':"Update ID"%></BUTTON>
-				</td>
-		</tr>
-	
-</table>
-<span class="HomeTinyLinks">
-	<% if (@teamType=='YAHOO' && @authInfo.nil?)%>
-	Enter Yahoo Log In ID (ie username@yahoo.com)		
-	<%end%>
-	<% if (@teamType=='ESPN' && @authInfo.nil?)%>
-	Enter ESPN Member Name or ESPN Email Address		
-	<%end%>
-	<% if (!@authInfo.nil?)%>
-	ID Added - Click Load Teams to Reload your teams
-	<%end%>
-</span> 
-<%= hidden_field_tag('teamType', @teamType) %>
-<%= hidden_field_tag('manageAction') %>
 
-<% end %>
+				<% if (@authInfo.nil?) %>
+			    <%= label_tag(:pass, "Password:") %>
+					<%= password_field_tag(:pass,'',options ={:size => 12}) %> 
+				<% else %>
+			    <%= label_tag(:pass, "Password:") %>
+					<%= password_field_tag(:pass,'', options = {:size => 12}) %>
+				<% end %>
 
+				<BUTTON type="button" id='team_manage_submit' onclick="submit_team()"><%= (@authInfo.nil?) ? 'Submit':"Update ID" %></BUTTON>
+
+				<%= hidden_field_tag('teamType', @teamType) %>
+				<%= hidden_field_tag('manageAction') %>
+
+			<% end %>
+		</div>
+	</div>
 </div>
