--- a/app/views/user/change_password.html.erb
+++ b/app/views/user/change_password.html.erb
@@ -6,7 +6,7 @@
       <h3 class="no-margin">Change Password</h3>
       <h6 class="subheader margin-bottom-2"><%=@user.email%></h6>
       <%= form_tag do %>
-        <%= label_tag(:pass, "Original Password:") %>
+        <%= label_tag(:oldpass, "Original Password:") %>
         <%= password_field_tag(:oldpass) %> 
         <%= label_tag(:pass, "New Password:") %>
         <%= password_field_tag(:pass) %>
