--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,8 @@
 	margin-right: auto;
 }
 
+h1 { font-size: 2.25em;}
+
 
 /*  =======================  */
 /*  List Styles  */
@@ -83,14 +85,24 @@ li.disc {
 
 
 .activate-button {
-	width: 100px;
+	/*width: 100px;*/
 
 	div.switch {
-		padding-left: 0.5em;
-		padding-right: 2.5em;
-		margin-top: 0.1em;
+		/*padding-left: 0.5em;*/
+		/*padding-right: 2.5em;*/
+		/*margin-top: 0.1em;*/
 		margin-bottom: 0;
+
+		span {
+			padding-left: 4px;
+		}
+
+		label {
+			padding: 0 0.2em 0.05em 0.2em;
+		}
 	}
+
+
 
 }
 
