--- a/app/views/static/terms.html.erb
+++ b/app/views/static/terms.html.erb
@@ -1,6 +1,4 @@
-<div class="container-fluid">
-  <div class="row-fluid">
-    <div class="span10">
+<div class="container">
 			<h1>Web Site | Terms and Conditions</h1>
 
 			<h3>Terms</h3>
@@ -63,7 +61,7 @@
 			</p>
 			<h3>Indemnification</h3>
 			<p> You agree to indemnify and hold harmless RotoStarter, its contractors, and its licensors, and their respective directors, officers, employees and agents from and against any and all claims and expenses, including attorneys’ fees, arising out of your use of the Website, including but not limited to your violation of this Agreement.
-			</p>
-		</div>
-	</div>
+			</p>		
 </div>
+
+
