Changed tabs to spaces.  Removed hr and added h1 top

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
     <%= render 'layouts/navigation' %>
 
     <div class="row">
-      <div class="large-12 columns"><hr>
+      <div class="large-12 columns">
         <%= yield %>
       </div>
     </div>
