--- a/app/views/static/howitworks.html.erb
+++ b/app/views/static/howitworks.html.erb
@@ -1,5 +1,5 @@
 <div class="container large-8">
-	<h1 class="no-margin">How Does RotoStarter Work</h1>
+	<h1>How Does RotoStarter Work</h1>
 	<h3 class="no-margin subheader">Overview For Getting Started</h3>
 
 		<h4 class="margin-top-2">Step 1: You Prioritize Your Batter and Pitchers</h4>
