--- a/app/views/static/recsettings.html.erb
+++ b/app/views/static/recsettings.html.erb
@@ -1,5 +1,5 @@
 <div class="container large-8">
-	<h1 class="no-margin">Recommended Settings</h1>
+	<h1>Recommended Settings</h1>
 	<h3 class="subheader">Basic Setup and Advanced Tips To Get You Started</h3>
 
 	<div class="margin-top-2">
