--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="large-12">
 	<div class="row margin-bottom-2">
-		<div class="large-12 columns">
+		<div class="large-12 margin-top-2 columns">
 			<img class="left margin-top-1 hide-for-small margin-right-1" src="/images/baseball.png" alt="Baseball" height="40" width="40">
 			<img class="left show-for-small margin-top-05 margin-right-1" src="/images/baseball.png" alt="Baseball" height="30" width="30">
 	    <div class="left">
