--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,79 @@ h1 {
 	margin-top: 1em;
 }
 
+#bg {
+  position: fixed; 
+  top: -50%; 
+  left: -50%; 
+  width: 200%; 
+  height: 200%;
+  z-index: -1;
+}
+#bg img {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  margin: auto; 
+  min-width: 50%;
+  min-height: 50%;
+}
+
+
+.home-wrapper h4 {
+	color: #FFF;
+	font-weight: normal;
+}
+.home-wrapper h1 {
+	color: #e0f2fe;
+	font-size: 20px;
+	margin-top: 3em;
+	font-weight: normal;
+}
+
+.home-wrapper,
+.home-wrapper p,
+.home-wrapper label {
+	color: #FFF;
+	font-size: 80%;
+}
+
+.button {
+   border-top: 1px solid #e0f2fe;
+   border-left: 1px solid #e0f2fe;
+   border-right: 1px solid #e0f2fe;
+   border-bottom: 1px solid #e0f2fe;
+   background: #5a4a42;
+   background: -webkit-gradient(linear, left top, left bottom, from(#5a4a42), to(#5a4a42));
+   background: -webkit-linear-gradient(top, #5a4a42, #5a4a42);
+   background: -moz-linear-gradient(top, #5a4a42, #5a4a42);
+   background: -ms-linear-gradient(top, #5a4a42, #5a4a42);
+   background: -o-linear-gradient(top, #5a4a42, #5a4a42);
+   padding: 12px 24px;
+   -webkit-border-radius: 16px;
+   -moz-border-radius: 16px;
+   border-radius: 16px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: #e0f2fe;
+   font-family: Helvetica, Arial, Sans-Serif;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+.button:hover {
+   border-top-color: #e0f2fe;
+   background: #e0f2fe;
+   color: #5a4a42;
+   }
+.button:active {
+   border-top-color: #e0f2fe;
+   background: #e0f2fe;
+   }
+
+
 /*  =======================  */
 /*  List Styles  */
 /*  =======================  */
@@ -75,13 +148,17 @@ ul.disc > li {
 .pad-left 				{ padding-left: 1em !important; }
 .no-padding 			{ padding: 0 !important; }
 
+.margin-top-1 		{ margin-top: 0 !important; }
 .margin-top-05 		{ margin-top: 0.5em !important; }
 .margin-top-1 		{ margin-top: 1em !important; }
 .margin-top-2 		{ margin-top: 2em !important; }
+.margin-bottom-0 	{ margin-bottom: 0 !important; }
 .margin-bottom-1 	{ margin-bottom: 1em !important; }
 .margin-bottom-2 	{ margin-bottom: 2em !important; }
+.margin-right-0 	{ margin-right: 0 !important; }
 .margin-right-1 	{ margin-right: 1em !important; }
 .margin-right-2 	{ margin-right: 2em !important; }
+.margin-left-0 		{ margin-left: 0 !important; }
 .margin-left-1 		{ margin-left: 1em !important; }
 .margin-left-2 		{ margin-left: 2em !important; }
 .no-margin 				{ margin: 0 !important; }
