--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -5,9 +5,9 @@
 
     <!-- Side Bar -->
 
-        <div class="large-4 small-12 columns">
+        <div class="large-4 small-12 columns clearfix">
           <div class="large-12 columns">
-            <h2 class="no-margin"><%= (@pitch) ? 'Pitcher':'Batter' %> Settings</h2>
+            <h3 class="margin-top-1 margin-bottom-0"><%= (@pitch) ? 'Pitcher':'Batter' %> Settings</h3>
             <h5 class="subheader">Set Up Your Lineup Preferences</h5>
                   <p class="left"><img src="/images/RSSwitchIcon.png" width="12" height="12" alt="Switch Icon">
                   <a class="LeftNavLink" href="/teams/<%= (@pitch) ? 'showbatters' : 'showpitchers' %>?id=<%= @team._id %>">
@@ -16,10 +16,10 @@
 
           </div>
 
-          <div class="left small-6 large-12 columns">
+          <div class="left small-6 large-12 columns margin-bottom-2">
             <div class="large-12 columns margin-top-2 margin-bottom-1">
               <img class="left margin-top-05 margin-right-1" src="/images/RSArrowDownBlue10.png" alt="Blue Down Arrow">
-              <h4 class="left no-margin">Yahoo</h4>
+              <h5 class="left no-margin">Yahoo</h5>
             </div>
             <% @yahoo_teams.each do |team| %>
               <div class="panel large-12 <%=(team._id==@team.id) ? 'bg-lightblue':'bg-lightgray'%>">
@@ -30,10 +30,11 @@
               </div>
             <% end %>
           </div>
-          <div class="left small-6 large-12 columns">
+
+          <div class="left small-6 large-12 columns margin-bottom-2">
             <div class="large-12 columns margin-top-2 margin-bottom-1">
               <img class="left margin-top-05 margin-right-1" src="/images/RSArrowDownBlue10.png" alt="Blue Down Arrow">
-              <h4 class="left no-margin">ESPN</h4>
+              <h5 class="left no-margin">ESPN</h5>
             </div>
             <% @espn_teams.each do |team| %>
               <div class="panel large-12 <%=(team._id==@team.id) ? 'bg-lightblue':'bg-lightgray'%>">
@@ -50,6 +51,7 @@
     <!-- End Side Bar -->
 
     <!-- Main -->
+      <div class="show-for-small"><br><br><hr></div>
       <%= form_tag '/teams/set_lineup', options = {:id => 'set_lineup'} do%>
 
         <div class="small-12 large-8 columns margin-top-2 margin-bottom-2">
