--- a/app/views/user/signup.html.erb
+++ b/app/views/user/signup.html.erb
@@ -1,85 +1,42 @@
-<table cellpadding="0" cellspacing="0" border="0">
-<thead>
-</thead>
-<tbody>
-<tr>
-<td colspan="4" class="HomeSectionHeader">
-<div class="HomeScreenshot">
-<br>
-<img src="/images/RSScreenshot.png" alt="RotoStarter:  Automatically Set Your Fantasy Lineups"></div>
-<h1 class="HomeTagline">
-<br>
-RotoStarter<br>
-Automatically Swaps Out<br>
-Gametime Inactives<br>
-Based On Your Preferences<br>
-</h1>
-<%= form_tag '/user/signup' do %>
-<div style="margin:0;padding:0;display:inline">
-<input name="utf8" type="hidden" value="&#x2713;"/>
-<input name="authenticity_token" type="hidden" value="j7+BQAJL4+O/vxqArSm4BmwFpvMhjGmR4vBRLrcxkc4="/>
+<div id="bg">
+  <img src="/images/bg.jpg" alt="">
 </div>
-<h3 class="HomeSignUp">
-<b>Sign Up Now</b><br><br>
-<label for="email">Email:</label>
-<%= text_field_tag('email', @user.email) %>
-<br>
-<label for="pass">Password:</label>
-<%= password_field_tag(:pass) %>
-<br>
-<label for="repass">Confirm Password:</label>
-<%= password_field_tag(:repass) %>
-  
-<br>
-<br>
-<span class="flash_message"><%= @user.errors.full_messages.first if @user.errors.any? %></span>
-<% flash.each do |name, msg| %>
-	        <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
-	      <% end %>
- <div class="HomeTinyLinks">I agree to the <a href="/static/terms">Terms of Service</a> and <a href="/static/privacy">Privacy Policy</a>
-                     </div><BR>
-<input name="commit" src="/images/RSSignUp.png" type="image" value="Sign Up"/>
-<div class="HomeTinyLinks">
-<%= link_to 'Log In', :action => 'login' %> or <%= link_to 'Forgot Your Password?', :action => 'forgot_password' %>
-</div>
-</h3>
-<% end %>
-</td>
-</tr>
-<tr>
-<td colspan="1" class="HomeSections">
-Your Personal Roster Assistant<br>
-<div class="HomeSectionsBrown">
-RotoStarter will check baseball inactives for you daily and will make roster substitutions on your behalf.
-</div>
-</td>
-<td colspan="1" class="HomeSections">
-Set It and Forget It!<br>
-<div class="HomeSectionsBrown">
-RotoStarter automates the manual task of logging in early every day just to start and bench your fantasy players.
-</div>
-</td>
-<td colspan="1" class="HomeSections">
-No Internet Access?<br>
-<div class="HomeSectionsBrown">
-Going on vacation?  Or have limited internet access?  Don't pay for internet access just to set the lineups for your fantasy teams when you're on vacation.
-</div>
-</td>
-<!--td colspan="1" class="HomeSections">
-Vacation in Peace<br>
-<div class="HomeSectionsBrown">
-Don't pay for internet access just to set the lineups for your fantasy teams when you're on vacation.
-</div>
-</td-->
-</tr>
-</tbody>
-<tfoot>
-<tr>
-<td colspan="3" class="HomeSectionHeader">
-<br>
-</td>
-</tr>
-</tfoot>
-</table>
+<div class="home-wrapper">
+  <div class="container large-10">
+    <div class="small-12 large-7 columns margin-bottom-2">
+      <div class="small-offset-1 small-10 large-offset-1 large-10">
+        <h1>RotoStarter saves you time and gives you an edge to dominate your fantasy sports leagues.</h1>
+        <ul class="disc">
+          <li>Saves you time by starting your players daily</li>
+          <li>Makes real time substitutions based on lineups</li>
+        </ul>
+      </div>
+    </div>
 
-
+    <div class="small-12 large-5 columns">
+      <div class="small-offset-1 small-8 large-offset-1 large-10">
+        <h4>RotoStarter Signup</h4>
+        <%= form_tag '/user/signup' do %>
+          <div style="margin:0;padding:0;display:inline">
+            <input name="utf8" type="hidden" value="&#x2713;"/>
+            <input name="authenticity_token" type="hidden" value="j7+BQAJL4+O/vxqArSm4BmwFpvMhjGmR4vBRLrcxkc4="/>
+          </div>
+          <%= label_tag(:email, "Email:") %>
+          <%= text_field_tag(:email) %>
+          <%= label_tag(:pass, "Password:") %>
+          <%= password_field_tag(:pass) %>
+          <%= label_tag(:repass, "Confirm Password:") %>
+          <%= password_field_tag(:repass) %>
+          <br>
+          <input name="commit" class="button" type="image" value="Sign Up"/>
+          <br><br>
+          <% flash.each do |name, msg| %>
+            <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
+          <% end %>
+          <p>I agree to the <a href="/static/terms">Terms of Service</a> and <a href="/static/privacy">Privacy Policy</a>
+          </p>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
