--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,9 @@
       </div>
     </div>
 
+    <%= render :partial => 'user/signup' %>
+    <%= render :partial => 'user/login' %>
+
     <footer class="row">
       <div class="large-12 columns"><hr>
         <div class="row">
