--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -53,6 +53,9 @@
       </div>
     </div>
     
+    <%= render :partial => 'user/signup' %>
+    <%= render :partial => 'user/login' %>
+
     <script>
     $(document).foundation();
     </script>
