--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,9 @@
         <h1><a href="/"><img src="/images/RotoStarterLogoBlue200.png" style="width: 100px; padding-top: 7px" alt="Roto Starter Logo"></a></h1>
       </li>
       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-      <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+      <li class="toggle-topbar menu-icon">
+        <a><span>Menu</span></a>
+      </li>
     </ul>
 
     <section class="top-bar-section">
@@ -39,10 +41,15 @@
         <li class="divider"></li>
 
         <% if (session[:user].nil?) %>
-          <li><%= link_to 'Log In', :controller => "user",:action => 'login' %></li> 
+          <li>        
+            <a href data-reveal-id="signup-modal">Sign Up</a>
+          </li>
+          <li>        
+            <a href data-reveal-id="login-modal">Log In</a>
+          </li> 
         <% else %>
           <li class="has-dropdown"> 
-            <a href="#"><%= session[:user] %></a>
+            <a><%= session[:user] %></a>
 
             <ul class="dropdown">
               <li><label>Your Account</label></li>
@@ -56,3 +63,7 @@
     </section>
   </nav>
 </div>
+
+
+
+
