Cleaned up static and user views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,8 @@
 
     <%= render :partial => 'user/signup' %>
     <%= render :partial => 'user/login' %>
+    <%= render :partial => 'user/forgot_password' %>
+    <%= render :partial => 'user/change_password' %>
 
     <footer class="row">
       <div class="large-12 columns"><hr>
