--- a/app/views/user/_login.html.erb
+++ b/app/views/user/_login.html.erb
@@ -1,7 +1,7 @@
 
     <div id="login-modal" class="reveal-modal wrapper-modal" style="display: none;">
-      <div class="container large-8"> 
-        <h3>RotoStarter Login</h3>
+      <div class="container large-9"> 
+        <h3>RotoStarter Log In</h3>
         <%= form_tag do %>
           <%= label_tag(:email, "Email:") %>
           <%= text_field_tag(:email) %>
@@ -12,9 +12,10 @@
           <% end %>
           <br><br>
           <input name="commit" type="submit" class="button" value="Log In"/>
-          <br><br>
+          <br>
           <p class="txt-tiny">
-            <%= link_to 'Forgot Your Password?', :action => 'forgot_password' %>
+            
+            <%= link_to 'Forgot Your Password?', :controller => 'user', :action => 'forgot_password' %>
           </p>
         <% end %>
       </div>
