--- a/app/views/user/_signup.html.erb
+++ b/app/views/user/_signup.html.erb
@@ -1,6 +1,6 @@
     <div id="signup-modal" class="reveal-modal wrapper-modal" style="display: none;">
-      <div class="container large-8"> 
-          <h3>RotoStarter Signup</h3>
+      <div class="container large-9"> 
+          <h3>RotoStarter Sign Up</h3>
             <%= form_tag '/user/signup' do %>
               <div style="margin:0;padding:0;display:inline">
                 <input name="utf8" type="hidden" value="&#x2713;"/>
