--- a/app/views/user/forgot_password.html.erb
+++ b/app/views/user/forgot_password.html.erb
@@ -1,16 +1,16 @@
 
 
 
-<div class="container large-8"> 
+<div class="container large-9"> 
   <div class="row">
     <div class="container small-8 large-5">
-      <h3 class="no-margin">Forgot Password</h3>
+      <h3 class="margin-top-2">Forgot Password</h3>
       <h6 class="subheader margin-bottom-2">To reset your password, enter your email address below.&nbsp;&nbsp;A new password will be sent to you by email.</h6>
       <%if (@show)%>
         <%= form_tag do %>
           <%= label_tag(:email, "E-mail:") %>
           <%= text_field_tag(:email) %> 
-          <%= submit_tag("Submit", :class=>"button small") %>
+          <%= submit_tag("Submit", :class=>"button") %>
           <BR>
             
           <% flash.each do |name, msg| %>
@@ -20,8 +20,6 @@
       <%else%>
         <p>Your password recovery email is on its way!</p>
         <p>An email containing your temporary password has been sent. If you do not receive an email within 10 minutes, check your spam folder.</p>
-      </ul>
       <%end%>
-
     </div>
 </div>
