--- a/app/views/user/signup.html.erb
+++ b/app/views/user/signup.html.erb
@@ -7,9 +7,9 @@
       <div class="small-offset-1 small-10 large-offset-1 large-10">
         <h1>RotoStarter gives you the edge you need to dominate your fantasy sports leagues.</h1>
         <ul class="disc">
-          <li>Saves you time every day</li>
+          <li>Sets your lineup for you every day</li>
           <li>Makes game time substitutions</li>
-          <li>Works when you are on vacation</li>
+          <li>Autopilots when you are on vacation</li>
         </ul>
       </div>
     </div>
@@ -21,7 +21,7 @@
           <a class="button" data-reveal-id="signup-modal">Get Started</a>
         </div>
         <div class="">
-          <h2>Already Roto-Powered?</h2>
+          <h2>Already Powered By RotoStarter?</h2>
           <a class="button" data-reveal-id="login-modal">Log In</a>
         </div>
       </div>
