--- a/app/views/user/_change_password.html.erb
+++ b/app/views/user/_change_password.html.erb
@@ -1,9 +1,9 @@
-
+<div id="changepassword-modal" class="reveal-modal wrapper-modal" style="display: none;">
   <div class="container large-9"> 
     <div class="row">
       <div class="container small-8 large-5">
-      <h3 class="margin-top-2">Change Password</h3>
-      <h6 class="subheader margin-bottom-2"><%=@user.email%></h6>
+      <h3 class="no-margin">Change Password</h3>
+      <h6 class="subheader margin-bottom-2"></h6>
       <%= form_tag do %>
         <%= label_tag(:oldpass, "Original Password:") %>
         <%= password_field_tag(:oldpass) %> 
@@ -14,11 +14,7 @@
         <BR>
         <%= submit_tag("Submit", :class=>"button small") %>
         <BR>
-          
-        <span class="flash_message"><%= @user.errors.full_messages.first if @user.errors.any? %></span>
-        <% flash.each do |name, msg| %>
-          <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
-        <% end %>
       <% end %>
     </div>
   </div>
+</div>
